use apache commons Base64 encoder, check for ':' in service credentials